[package]
name = "albergue-turso-sync"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
bytes = "1"
libsql = { workspace = true, features = ["encryption"] }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[[bin]]
name = "albergue-turso-sync"
path = "src/main.rs"
